--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "body-parser": "1.19.0",
+    "body-parser": "^1.20.2",
     "cross-env": "7.0.2",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.4.1",
-    "sequelize": "5.21.3",
+    "pg-promise": "^11.5.4",
+    "sequelize": "^6.33.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3"
   }
 }
